--- a/app/src/main/res/layout/card_product.xml
+++ b/app/src/main/res/layout/card_product.xml
@@ -9,6 +9,7 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/productCardView"
         android:layout_width="match_parent"
+        android:longClickable="true"
         android:layout_height="250dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
