--- a/app/src/main/res/layout/cardview_cart.xml
+++ b/app/src/main/res/layout/cardview_cart.xml
@@ -1,105 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:id="@+id/singleCartInstance"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginEnd="16dp"
+    android:layout_marginBottom="10dp"
+    android:background="@drawable/cart_background"
+    android:clickable="true"
+    android:elevation="30dp"
+    android:longClickable="true">
 
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_margin="5dp"
-        app:cardCornerRadius="5dp">
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/cartProductImage"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/chicken_roast" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <TextView
+        android:id="@+id/cartProductName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="Chicken Roast"
+        android:textColor="#373b54"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/cartProductImage"
+        app:layout_constraintTop_toTopOf="@+id/cartProductImage" />
 
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/cartProductImage"
-                android:layout_width="150dp"
-                android:layout_height="170dp"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="3dp"
-                android:alpha="0.9"
-                android:scaleType="centerCrop"
-                android:src="@drawable/temp_image" />
+    <ImageButton
+        android:id="@+id/subCartItem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@color/transparent"
+        app:layout_constraintBottom_toBottomOf="@+id/cartProductImage"
+        app:layout_constraintStart_toEndOf="@+id/cartProductImage"
+        app:srcCompat="@drawable/minus" />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/cartProductName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/cartProductPrice"
-                android:layout_alignTop="@+id/cartProductImage"
-                android:layout_marginTop="14dp"
-                android:text="Name"
-                android:textAllCaps="false"
-                android:textColor="@android:color/black"
-                android:textSize="22sp"
-                android:textStyle="bold" />
+    <TextView
+        android:id="@+id/cartQuantity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="1"
+        android:textColor="#373b54"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/subCartItem"
+        app:layout_constraintStart_toEndOf="@+id/subCartItem"
+        app:layout_constraintTop_toTopOf="@+id/subCartItem" />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/cartProductPrice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="14dp"
-                android:layout_toEndOf="@+id/cartProductImage"
-                android:text="Price"
-                android:textColor="@android:color/black" />
+    <ImageButton
+        android:id="@+id/addCartItem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:background="@color/transparent"
+        app:layout_constraintBottom_toBottomOf="@+id/subCartItem"
+        app:layout_constraintStart_toEndOf="@+id/cartQuantity"
+        app:layout_constraintTop_toTopOf="@+id/subCartItem"
+        app:srcCompat="@drawable/plus" />
 
-            <ImageButton
-                android:id="@+id/addCartItem"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_alignTop="@+id/cartQuantity"
-                android:layout_toEndOf="@+id/cartQuantity"
-                android:background="@android:color/white"
-                android:scaleType="fitXY"
-                app:srcCompat="@drawable/ic_baseline_add_24" />
+    <TextView
+        android:id="@+id/cartProductPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:text="0"
+        android:textColor="#373b54"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/cartProductName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/cartProductName" />
 
-            <ImageButton
-                android:id="@+id/subCartItem"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_alignStart="@+id/cartProductPrice"
-                android:layout_alignBottom="@+id/cartProductImage"
-                android:layout_marginBottom="14dp"
-                android:background="@android:color/white"
-                android:scaleType="fitXY"
-                app:srcCompat="@drawable/ic_baseline_remove_24" />
+    <TextView
+        android:id="@+id/product_currency"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="4dp"
+        android:text="RS"
+        android:textColor="#ff3d00"
+        app:layout_constraintBottom_toBottomOf="@+id/cartProductPrice"
+        app:layout_constraintEnd_toStartOf="@+id/cartProductPrice"
+        app:layout_constraintTop_toTopOf="@+id/cartProductPrice" />
 
-            <Button
-                android:id="@+id/delete_from_cart"
-                style="@style/Widget.AppCompat.Button.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/cartQuantity"
-                android:layout_alignBottom="@+id/cartQuantity"
-                android:layout_marginStart="10dp"
-                android:layout_toEndOf="@+id/addCartItem"
-                android:background="@android:color/white"
-                android:padding="10dp"
-                android:text="Remove"
-                android:textColor="#BB0000" />
+    <TextView
+        android:id="@+id/total_item_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:textColor="#373b54"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/addCartItem"
+        app:layout_constraintEnd_toEndOf="@+id/cartProductPrice"
+        app:layout_constraintTop_toTopOf="@+id/addCartItem" />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/cartQuantity"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_alignTop="@+id/subCartItem"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_toEndOf="@+id/subCartItem"
-                android:gravity="center"
-                android:textAlignment="center" />
-
-        </RelativeLayout>
-
-    </com.google.android.material.card.MaterialCardView>
-
-
-</RelativeLayout>
+    <TextView
+        android:id="@+id/textView21"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="4dp"
+        android:text="RS"
+        android:textColor="#ff3d00"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/total_item_price"
+        app:layout_constraintEnd_toStartOf="@+id/total_item_price"
+        app:layout_constraintTop_toTopOf="@+id/total_item_price" />
+</androidx.constraintlayout.widget.ConstraintLayout>
