--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,4 +22,9 @@
         <item name="android:background">@color/green</item>
     </style>
 
+    <style name="Theme.Rating" parent="Theme.AppCompat.Light">
+        <item name="colorAccent">@color/pastelGreen</item>
+    </style>
+
+
 </resources>
