--- a/app/src/main/res/layout/card_favourite.xml
+++ b/app/src/main/res/layout/card_favourite.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="185dp"
-        android:layout_margin="5dp"
-        app:cardCornerRadius="5dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentTop="true"
+        android:layout_margin="5dp"
+        app:cardCornerRadius="5dp">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -20,12 +21,12 @@
                 android:id="@+id/favImage"
                 android:layout_width="150dp"
                 android:layout_height="170dp"
-                android:src="@drawable/temp_image"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_margin="5dp"
                 android:alpha="0.9"
-                android:scaleType="centerCrop" />
+                android:scaleType="centerCrop"
+                android:src="@drawable/temp_image" />
 
             <TextView
                 android:id="@+id/favName"
@@ -43,41 +44,45 @@
                 android:id="@+id/favPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Price"
-                android:padding="5dp"
-                android:textColor="@android:color/black"
                 android:layout_above="@+id/relativeLayout2"
                 android:layout_alignStart="@+id/relativeLayout2"
-                android:layout_marginBottom="22dp" />
+                android:layout_marginBottom="22dp"
+                android:padding="5dp"
+                android:text="Price"
+                android:textColor="@android:color/black" />
 
             <RelativeLayout
+                android:id="@+id/relativeLayout2"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_alignBottom="@+id/favImage"
                 android:layout_alignParentEnd="true"
-                android:layout_toEndOf="@+id/favImage"
-                android:id="@+id/relativeLayout2">
+                android:layout_toEndOf="@+id/favImage">
 
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/removeFromFavourite"
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Remove"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentEnd="true"
-                    android:background="@android:color/white"
-                    android:textColor="#BB0000"
-                    android:layout_toEndOf="@+id/moveToCart" />
+                    android:layout_toEndOf="@+id/moveToCart"
+                    android:background="@color/grey_darken_1"
+                    android:backgroundTint="@color/grey_darken_1"
+                    android:text="Remove"
+                    android:textColor="#BB0000" />
 
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/moveToCart"
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:background="@android:color/white"
-                    android:textColor="#0000BB"
-                    android:padding="7dp"
                     android:layout_alignParentTop="true"
-                    android:text="MOVE TO CART" />
+                    android:background="@android:color/white"
+                    android:padding="7dp"
+                    android:paddingStart="20dp"
+                    android:text="Add To Cart"
+                    android:textColor="#0000BB" />
 
             </RelativeLayout>
 
