--- a/app/src/main/res/layout/activity_food.xml
+++ b/app/src/main/res/layout/activity_food.xml
@@ -18,7 +18,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/product_name"
+                android:id="@+id/food_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="60dp"
@@ -29,7 +29,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/product_price"
+                android:id="@+id/food_price"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -40,13 +40,14 @@
                 android:textStyle="bold" />
 
             <ImageView
-                android:id="@+id/product_image"
+                android:id="@+id/food_image"
                 android:layout_width="395dp"
                 android:layout_height="311dp"
                 android:layout_marginTop="8dp"
                 app:srcCompat="@drawable/chicken_roast" />
 
             <LinearLayout
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
@@ -86,9 +87,9 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/product_description"
+                    android:id="@+id/food_desc"
                     android:layout_width="182dp"
-                    android:layout_height="38dp"
+                    android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:layout_centerInParent="true"
                     android:layout_margin="20dp"
@@ -111,6 +112,14 @@
 
             </RelativeLayout>
 
+            <TextView
+                android:paddingStart="30dp"
+                android:textSize="20sp"
+
+                android:text="User Review"
+                android:id="@+id/user_review"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
         </LinearLayout>
 
@@ -118,9 +127,11 @@
         <!--custom_dialog.xml-->
 
 
+
     </androidx.core.widget.NestedScrollView>
 
     <Button
+        android:visibility="invisible"
         android:id="@+id/add_to_cart"
         android:layout_width="384dp"
         android:layout_height="61dp"
