--- a/app/src/main/res/layout/card_history.xml
+++ b/app/src/main/res/layout/card_history.xml
@@ -1,53 +1,89 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.github.florent37.expansionpanel.viewgroup.ExpansionsViewGroupLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    app:expansion_openOnlyOne="true"
+   android:paddingStart="20dp"
+    android:paddingTop="10dp"
+    android:paddingEnd="20dp"
+    android:paddingBottom="10dp">
 
-
-    <RelativeLayout
+    <com.github.florent37.expansionpanel.ExpansionHeader
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingStart="30dp"
-        android:paddingEnd="30dp">
+        android:layout_height="50dp"
+        android:background="@color/purple_200"
+        app:expansion_headerIndicator="@id/headerIndicator"
+        app:expansion_layout="@id/expansionLayout"
+        app:expansion_toggleOnClick="true">
 
-
+        <!-- HEADER -->
         <TextView
             android:id="@+id/historyDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:paddingTop="30dp"
-            android:text="Here history of the user will be shown" />
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="Here history of the user will be shown"
+            android:textSize="20sp" />
 
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/historyName"
+        <!-- HEADER INDICATOR -->
+        <ImageView
+            android:id="@+id/headerIndicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/historyDate"
-            android:text="Name" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/historyQuantity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/historyDate"
-            android:layout_centerHorizontal="true"
-            android:text="Quantity" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/historyPrice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/historyDate"
-            android:layout_alignParentEnd="true"
-            android:text="Price" />
+            android:layout_gravity="center_vertical|right"
+            android:layout_marginLeft="16dp"
+            android:adjustViewBounds="true"
+            app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp" />
 
 
+    </com.github.florent37.expansionpanel.ExpansionHeader>
 
-    </RelativeLayout>
+    <com.github.florent37.expansionpanel.ExpansionLayout
+        android:id="@+id/expansionLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/purple_500">
+
+        <!-- CONTENT -->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingStart="30dp"
+            android:paddingEnd="30dp">
 
 
-</RelativeLayout>
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/historyName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingEnd="5dp"
+                android:text="Name"
+                android:textSize="13sp" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/historyQuantity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:paddingEnd="5dp"
+                android:text="Quantity"
+                android:textSize="13sp" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/historyPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:clickable="true"
+                android:paddingEnd="5dp"
+                android:text="Price"
+                android:textSize="13sp" />
+
+
+        </RelativeLayout>
+
+    </com.github.florent37.expansionpanel.ExpansionLayout>
+</com.github.florent37.expansionpanel.viewgroup.ExpansionsViewGroupLinearLayout>
