--- a/app/src/main/res/layout/dialog_checkout.xml
+++ b/app/src/main/res/layout/dialog_checkout.xml
@@ -34,22 +34,24 @@
                 android:id="@+id/addressCheckout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingEnd="20dp"
                 android:text="Address:" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/phoneCheckout"
-
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/addressCheckout"
                 android:layout_marginTop="58dp"
                 android:layout_marginBottom="40dp"
+                android:paddingEnd="20dp"
                 android:text="Phone Number:" />
 
             <EditText
                 android:id="@+id/addressCheckoutEditText"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
+
                 android:layout_toRightOf="@+id/addressCheckout"
                 android:editable="false"
                 android:singleLine="true" />
@@ -69,7 +71,7 @@
                 android:layout_below="@+id/addressCheckout"
                 android:layout_alignParentEnd="true"
                 android:layout_marginTop="47dp"
-                android:layout_marginEnd="107dp"
+                android:layout_marginEnd="60dp"
                 android:singleLine="true" />
 
             <com.google.android.material.button.MaterialButton
@@ -77,6 +79,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/phoneCheckoutEditText"
+                android:layout_marginTop="40dp"
                 android:layout_centerHorizontal="true"
                 android:text="Done" />
         </RelativeLayout>
