--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -23,4 +23,10 @@
         android:title="Profile"
         android:icon="@drawable/ic_profile"
         />
+
+    <item
+        android:id="@+id/bottomRecipe"
+        android:title="Recipe"
+        android:icon="@drawable/ic_outdoor_grill"
+        />
 </menu>
