--- a/app/src/main/res/menu/draw_menu.xml
+++ b/app/src/main/res/menu/draw_menu.xml
@@ -1,32 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:showIn="navigation_view">
+    tools:showIn="navigation_view"
+    >
 
-    <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_baseline_home"
-            android:title="Home" />
-        <item
-        android:id="@+id/nav_profile"
-        android:icon="@drawable/ic_profile"
-        android:title="Profile" />
-        <item
-            android:id="@+id/nav_Recipe"
-            android:icon="@drawable/ic_outdoor_grill"
-            android:title="Recipe" />
+    <group  android:checkableBehavior="single" android:id="@+id/menu1" >
+<!--        <item-->
+<!--            android:id="@+id/nav_all"-->
+<!--            android:title="all" />-->
+<!--        <item-->
+<!--        android:id="@+id/nav_profile"-->
+<!--        android:icon="@drawable/ic_profile"-->
+<!--        android:title="Profile" />-->
+<!--        <item-->
+<!--            android:id="@+id/nav_Recipe"-->
+<!--            android:icon="@drawable/ic_outdoor_grill"-->
+<!--            android:title="Recipe" />-->
 
 
     </group>
 
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_message"
-                android:title="Share" />
-        </menu>
-    </item>
+<!--    <item android:title="Communicate">-->
+<!--        <menu>-->
+<!--            <item-->
+<!--                android:id="@+id/nav_share"-->
+<!--                android:icon="@drawable/ic_message"-->
+<!--                android:title="Share" />-->
+<!--        </menu>-->
+<!--    </item>-->
 
 </menu>
